--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
   "author": "Manjil Tamang",
   "license": "ISC",
   "dependencies": {
+    "@loadable/component": "^5.13.1",
+    "@loadable/server": "^5.13.1",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
-    "query-string": "^6.11.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet-async": "^1.0.4",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
@@ -36,12 +38,12 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@loadable/babel-plugin": "^5.13.0",
+    "@loadable/webpack-plugin": "^5.13.0",
     "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^4.0.3",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "sass-loader": "^8.0.2",
