--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Web server from Himalayan Hike",
   "main": "index.js",
   "scripts": {
-    "start": "MODE=PROD node build/bundle.js",
+    "start": "node build/bundle.js",
     "dev": "npm-run-all --parallel dev:*",
     "dev:run": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev:server": "webpack --mode development --config webpack.server.js --watch",
     "dev:client": "webpack --mode development --config webpack.client.js --watch",
     "build": "npm-run-all --parallel build:*",
     "build:server": "webpack --mode production --config webpack.server.js",
-    "build:client": "webpack --mode production --config webpack.client.js"
+    "build:client": "webpack --mode production --config webpack.client.js",
+    "test": "jest"
   },
   "author": "Manjil Tamang",
   "license": "ISC",
@@ -41,11 +42,24 @@
     "@loadable/babel-plugin": "^5.13.0",
     "@loadable/webpack-plugin": "^5.13.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "css-loader": "^3.4.2",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "jest": "^26.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
     "sass-loader": "^8.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
